--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="calculator">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-label>Hola :)</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="images"></ion-icon>
-      <ion-label>Gallery</ion-label>
+    <ion-tab-button tab="period">
+      <ion-icon name="egg"></ion-icon>
+      <ion-label>Periodo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="happy"></ion-icon>
+      <ion-label>Concepción</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
